<resources>
    <string name="app_name">NeverNote</string>
    <string name="welcome">Welcome to the NeverNote experience!</string>
    <string name="evernote_login">Login with Evernote</string>
    <string name="title_activity_never_note_main">NeverNoteMainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_order_by_title">Order by title</string>
    <string name="action_order_by_date">Order by date</string>
    <string name="action_order_by_date_created">Order by date created</string>
    <string name="action_order_by_date_updated">Order by date updated</string>

    <string name="note_created_by">Created on %1$s. Last update on %2$s</string>

    <string name="note_date_format">dd/MM/yyyy</string>

    <string name="enter_to_create_new_note">Enter note details and press button to create a new one!</string>
    <string name="select_notebook_and_enter_details">Select the notebook you want your note to be in, enter note details and press button to create a new one!</string>
    <string name="note_title_here">Note title here</string>
    <string name="note_content_here">Note content here</string>
    <string name="create_note">Create note</string>

    <string name="alert_title_or_content_empty">Title and content are required fields in order to create a new note</string>

    <string name="note_ocr_title">Write your note\'s %s with your fingers on the center of the space below (for better recognition)</string>
    <string name="note_ocr_enter_title">title</string>
    <string name="note_ocr_enter_content">content</string>
    <string name="note_ocr_process">Convert!</string>
    <string name="from_ocr">OCR</string>
</resources>
