<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nevernote.activities.NeverNoteMainActivity">

    <item android:id="@+id/action_order_by_title" android:title="@string/action_order_by_title"
        app:showAsAction="never" />
    <item android:id="@+id/action_order_by_date" android:title="@string/action_order_by_date"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_order_by_date_created" android:title="@string/action_order_by_date_created"
                app:showAsAction="never"/>
            <item android:id="@+id/action_order_by_date_updated" android:title="@string/action_order_by_date_updated"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>
